--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,10 @@ categories = ["data-structures", "no-std"]
 documentation = "https://docs.rs/holodeque"
 repository = "https://github.com/dataphract/holodeque"
 readme = "README.md"
-version = "0.2.0" # if changed, html_root_url must also be changed!
+version = "0.2.1" # if changed, html_root_url must also be changed!
 edition = "2018"
+
+rust_version = "1.55.0"
 
 [package.metadata.docs.rs]
 all-features = true
